--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css" />
 		<title>陳孝杰的簡歷</title>
 	</head>
 	<body>
@@ -13,8 +13,7 @@
 				<img
 					src="https://images.unsplash.com/photo-1682687219356-e820ca126c92?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2940&q=80"
 					alt="圖片"
-					height="300"
-                    id="myimg"
+					id="myimg"
 				/>
 				<h1 id="myname">我是<br />陳孝杰。</h1>
 			</section>
@@ -26,7 +25,7 @@
 					<img
 						src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/%E5%9C%8B%E7%AB%8B%E6%9D%B1%E8%8F%AF%E5%A4%A7%E5%AD%B8%E5%9C%96%E6%9B%B8%E9%A4%A8_National_Dong_Hwa_University_Library.jpg/600px-%E5%9C%8B%E7%AB%8B%E6%9D%B1%E8%8F%AF%E5%A4%A7%E5%AD%B8%E5%9C%96%E6%9B%B8%E9%A4%A8_National_Dong_Hwa_University_Library.jpg"
 						alt="東華大學"
-						height="200"
+                        id="ndhuimg"
 					/>
 				</a>
 				<ul>
@@ -65,6 +64,6 @@
 				</ol>
 			</section>
 		</main>
-        <script src="script.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
