--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
-		<title>陳孝杰的簡歷</title>
+		<title>笑J的簡歷</title>
 	</head>
 	<body>
 		<main>
@@ -15,7 +15,7 @@
 					alt="圖片"
 					id="myimg"
 				/>
-				<h1 id="myname">我是<br />陳孝杰。</h1>
+				<h1 id="myname">我是<br />陳笑J。</h1>
 			</section>
 
 			<section class="edu padding_default">
